--- a/templates/plan.html
+++ b/templates/plan.html
@@ -22,7 +22,7 @@ Tapahtuman peruminen hukkaa tallentamattomat ajat, joten tallenna ennen perumist
   {% for j in range(events|length) %}
     <tr>
       <td>{{events[j][1]}}</td>
-      <td><input id="timefield" type="time" name="time_start"> - <input id="timefield" type="time" name="time_finish"></td>
+      <td>   klo <input id="timefield" type="time" name="time_start"> - <input id="timefield" type="time" name="time_finish"></td>
       <input type="hidden" name="day" value={{i}}> <input type="hidden" name="event_index" value={{j}}>
     </tr>
   {% endfor %}
