Create new group separately

--- a/templates/new_group.html
+++ b/templates/new_group.html
@@ -3,7 +3,7 @@
 
 <h2>Rekisteröidy</h2>
 
-<form action="/register" method="POST">
+<form action="/register_new_group" method="POST">
 <p>
 Tunnus: <br><input type="text" name="username" minlength="1" maxlength="35">
 <p>
